--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@h-labs/md-map": "0.0.1",
     "core-js": "^3.6.5",
+    "md-map": "0.0.2",
     "vue": "^3.0.0"
   },
   "devDependencies": {
